--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,50 @@
 
 {% if page.author_profile or layout.author_profile or page.sidebar %}
   <div class="sidebar sticky">
+
+    {% if page.author_profile or layout.author_profile %}
+      {% include author-profile.html %}
+    {% endif %}
+
+    {% if page.url == "/" %}
+      <!-- Homepage image in sidebar -->
+      <div style="padding: 20px;">
+        <img src="{{ site.baseurl }}/images/ChatGPT.png" 
+             style="width: 100%; height: auto; border-radius: 10px; display: block;">
+      </div>
+    {% endif %}
+
+    {% if page.sidebar %}
+      {% for s in page.sidebar %}
+        {% if s.image %}
+          <img src=
+          {% if s.image contains "://" %}
+            "{{ s.image }}"
+          {% else %}
+            "{{ s.image | prepend: "/images/" | prepend: base_path }}"
+          {% endif %}
+          alt="{% if s.image_alt %}{{ s.image_alt }}{% endif %}">
+        {% endif %}
+        {% if s.title %}<h3>{{ s.title }}</h3>{% endif %}
+        {% if s.text %}{{ s.text | markdownify }}{% endif %}
+      {% endfor %}
+      {% if page.sidebar.nav %}
+        {% include nav_list nav=page.sidebar.nav %}
+      {% endif %}
+    {% endif %}
+
+  </div>
+{% endif %}
+
+
+
+
+
+
+<!-- {% include base_path %}
+
+{% if page.author_profile or layout.author_profile or page.sidebar %}
+  <div class="sidebar sticky">
   {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
   {% if page.sidebar %}
     {% for s in page.sidebar %}
@@ -22,4 +66,4 @@
     {% endif %}
   {% endif %}
   </div>
-{% endif %}
+{% endif %} -->
