--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -73,7 +73,7 @@
 }
 
 .home-graphic img {
-  width: 320px;         /* change this to resize (e.g., 260px, 280px, 360px) */
+  width: 400px;         /* change this to resize (e.g., 260px, 280px, 360px) 320 */
   max-width: 100%;
   height: auto;
   border-radius: 14px;
